--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "react-hosted-login-box",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Frontegg",
+    "email": "hello@frontegg.com",
+    "url": "https://frontegg.com"
+  },
   "dependencies": {
+    "@frontegg/react": "^3.0.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
